// Copyright (c) 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package services;

// Storage is the in-transit storage configuration.
message Storage {
  // BigTable is the set of BigTable configuration parameters.
  message BigTable {
    // The name of the BigTable instance project.
    string project = 1;
    // The name of the BigTable instance zone.
    string zone = 2;
    // The name of the BigTable instance cluster.
    string cluster = 3;
    // The name of the BigTable instance's log table.
    string log_table_name = 4;
  }

  // Type is the transport configuration that is being used.
  oneof Type {
    BigTable bigtable = 1;
  }
}
